--- a/scraper.html
+++ b/scraper.html
@@ -188,6 +188,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents-Programming--81657105</li>
 
+<li>$:/state/toc/TableOfContents-Requests--81657105</li>
+
 <li>$:/state/toc/TableOfContents-Selenium--81657105</li>
 
 <li>$:/state/toc/TableOfContents-ZMQ--81657105</li>
@@ -212,8 +214,6 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
 
-<li>识别captcha</li>
-
 <li>Database</li>
 
 <li>fabric+virtualenv+pip</li>
@@ -223,6 +223,8 @@ Error message and password prompt
 <li>firefox selenium proxy server</li>
 
 <li>general methods</li>
+
+<li>Maoyan</li>
 
 <li>mysql reset password</li>
 
@@ -244,6 +246,8 @@ Error message and password prompt
 
 <li>requests usage</li>
 
+<li>Scraper</li>
+
 <li>Selenium</li>
 
 <li>selenum and firefox version compatibility</li>
@@ -255,6 +259,12 @@ Error message and password prompt
 <li>subprocess.Popen</li>
 
 <li>TableOfContents</li>
+
+<li>ttf reader</li>
+
+<li>反击“猫眼电影”网站的反爬虫策略</li>
+
+<li>识别captcha</li>
 
 </ul>
 </p>
@@ -8570,8 +8580,11 @@ Error message and password prompt
 <div created="20171110032932204" creator="Shaojie Kang" modified="20171110032935516" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Programming--81657105">
 <pre>close</pre>
 </div>
-<div created="20171110035805585" creator="Shaojie Kang" modified="20171110035805585" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Selenium--81657105">
-<pre>open</pre>
+<div created="20171218030857101" creator="Shaojie Kang" modified="20171218030909789" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Requests--81657105">
+<pre>close</pre>
+</div>
+<div created="20171110035805585" creator="Shaojie Kang" modified="20171218030850469" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Selenium--81657105">
+<pre>close</pre>
 </div>
 <div created="20171110035112443" creator="Shaojie Kang" modified="20171110035112443" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-ZMQ--81657105">
 <pre>open</pre>
@@ -8579,7 +8592,7 @@ Error message and password prompt
 <div created="20170623084418490" creator="k" modified="20170623084506034" modifier="Shaojie Kan" title="$:/status/UserName">
 <pre>Shaojie Kang</pre>
 </div>
-<div list="Python TableOfContents Requests [[request header]] [[requests usage]]" title="$:/StoryList">
+<div list="[[request header]] Requests Python TableOfContents Scraper Maoyan [[ttf reader]] 反击“猫眼电影”网站的反爬虫策略" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8595,7 +8608,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/CourageK/experience/scraper.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/kangshaojie.INTRA/experience/scraper.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8615,7 +8628,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/CourageK/experience/scraper.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/kangshaojie.INTRA/experience/scraper.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8752,9 +8765,6 @@ Error message and password prompt
 <div created="20170623094743829" creator="Shaojie Kang" modified="20170627032043604" modifier="Shaojie Kang" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
 <pre>986px</pre>
 </div>
-<div created="20171117063348512" creator="Shaojie Kang" modified="20171117063409822" modifier="Shaojie Kang" tags="Selenium" title="识别captcha">
-<pre>http://www.pythonexample.com/code/solve-recaptcha-v2/</pre>
-</div>
 <div created="20171110032552716" creator="Shaojie Kang" modified="20171110032604630" modifier="Shaojie Kang" tags="TableOfContents" title="Database">
 <pre></pre>
 </div>
@@ -8819,6 +8829,9 @@ soup.findAll(lambda tag: len(tag.attrs) == 2)
 !! 3: Regular Expressions
 
 </pre>
+</div>
+<div created="20171218030930110" creator="Shaojie Kang" modified="20171218031007310" modifier="Shaojie Kang" tags="Scraper" title="Maoyan">
+<pre></pre>
 </div>
 <div created="20170705064005264" creator="Shaojie Kang" modified="20171110032623926" modifier="Shaojie Kang" tags="Database" title="mysql reset password">
 <pre>https://superuser.com/questions/603026/mysql-how-to-fix-access-denied-for-user-rootlocalhost
@@ -9092,6 +9105,9 @@ headers2[&quot;Referer&quot;] = quote(paipian_url1)
 
 http://www.zhidaow.com/post/python-requests-install-and-brief-introduction</pre>
 </div>
+<div created="20171218030917567" creator="Shaojie Kang" modified="20171218030927390" modifier="Shaojie Kang" tags="TableOfContents" title="Scraper">
+<pre></pre>
+</div>
 <div created="20171110035700739" creator="Shaojie Kang" modified="20171110035709906" modifier="Shaojie Kang" tags="TableOfContents" title="Selenium">
 <pre></pre>
 </div>
@@ -9176,6 +9192,105 @@ while True:
 &lt;&lt;toc-selective-expandable 'TableOfContents'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20171218041035439" creator="Shaojie Kang" modified="20171218113042206" modifier="Shaojie Kang" tags="Maoyan" title="ttf reader">
+<pre>http://pyopengl.sourceforge.net/pydoc/fontTools.ttLib.html
+
+</pre>
+</div>
+<div created="20171218031009830" creator="Shaojie Kang" modified="20171218031322346" modifier="Shaojie Kang" tags="Maoyan" title="反击“猫眼电影”网站的反爬虫策略">
+<pre>https://www.cnblogs.com/h2zZhou/p/7248261.html
+
+!! 0×01 前言
+前两天在百家号上看到一篇名为《反击爬虫，前端工程师的脑洞可以有多大？》的文章，文章从多方面结合实际情况列举了包括猫眼电影、美团、去哪儿等大型电商网站的反爬虫机制。的确，如文章所说，对于一张网页，我们往往希望它是结构良好，内容清晰的，这样搜索引擎才能准确地认知它；而反过来，又有一些情景，我们不希望内容能被轻易获取，比方说电商网站的交易额，高等学校网站的题目等。因为这些内容，往往是一个产品的生命线，必须做到有效地保护。这就是爬虫与反爬虫这一话题的由来。本文就以做的较好的“猫眼电影”网站为例，搞定他的反爬虫机制，轻松爬去我们想要的数据！
+
+!! 0×02 常见反爬虫
+从功能上来讲，爬虫一般分为数据采集，处理，储存三个部分。而作为程序员的我们只关心数据采集部分，处理什么的还是交给那些数据分析师去搞吧。
+
+一般来说，大多数网站会从三个方面反爬虫：用户请求的Headers，用户行为，网站目录和数据加载方式。前两种比较容易遇到，大多数网站都从这些角度来反爬虫，而第三种则相对比较特殊，一些应用ajax的网站会采用，这样无疑会增大了爬虫爬取的难度。
+
+然而，这三种反爬虫策略则早已有应对的方法和策略。如果遇到了从用户请求的Headers反爬虫机制，可以直接在爬虫中添加Headers，将浏览器的User-Agent复制到爬虫的Headers中；或者将Referer值修改为目标网站域名。对于检测Headers的反爬虫，在爬虫中修改或者添加Headers就能很好的绕过。对于基于用户行为的反爬虫其实就是通过限制同一IP短时间内多次访问同一页面，应对策略也是很粗暴——使用IP代理，可以专门写一个爬虫，爬取网上公开的代理ip，检测后全部保存起来。有了大量代理ip后可以每请求几次更换一个ip，即可绕过这种反爬虫机制。对于最后一种动态页面反爬虫机制来讲，selenium+phantomJS框架能够让你在无界面的浏览器中模拟加载网页的动态请求，毕竟selenium可是自动化渗透的神器。
+
+!! 0×03 猫眼反爬虫介绍
+介绍完常见的反爬虫机制，我们回过头看看我们今天的主角：猫眼电影的反爬虫是什么样的。
+
+对于每日的电影院票价这一重要数据，源代码中展示的并不是纯粹的数字。而是在页面使用了font-face定义了字符集，并通过unicode去映射展示。简单介绍下这种新型的web-fongt反爬虫机制：使用web-font可以从网络加载字体，因此我们可以自己创建一套字体，设置自定义的字符映射关系表。例如设置0xefab是映射字符1，0xeba2是映射字符2，以此类推。当需要显示字符1时，网页的源码只会是0xefab，被采集的也只会是 0xefab，并不是1：
+
+
+采集者只能获取到类似&amp;#xebc4;的数据，并不能知道”&amp;#xebc4;”映射的字符是什么，实现了数据防采集。而对于正常访问的用户则没有影响，因为浏览器会加载css中的font字体为我们渲染好，实时显示在网页中。也就是说，除去图像识别，必须同时爬取字符集，才能识别出数字。 
+
+查看猫眼的网站源文件正是如此：
+
+所有的票价信息都是由动态font字体“加密”后得到的。既然知道了原理，我们就继续发掘，通过分析网站HTML结构，我们发现网站每次渲染票价的font字体都可以在网页的script标签中被找到：
+
+字体是由base64加密后存储在网页中的，于是乎，上python：
+
+
+```
+#将base64加密的font文件解密转存本地
+font = re.findall(r&quot;src: url\(data:application/font-woff;charset=utf-8;base64,(.*?)\) format&quot;,response_all)[0]
+fontdata=base64.b64decode(font)  
+file=open('/home/jason/workspace/1.ttf','wb')  
+file.write(fontdata)  
+file.close()  
+```
+
+我们在爬取时将font文件解密后存储在本地存储为ttf文件，留做备用。
+
+前文提到过这种web-font定义了字符集，要通过unicode去映射展示，所以，我们要构建ttf字体文件中unicode映射出来的字符字典：
+
+python代码：
+
+import fontforge
+def tff2Unicode():#将字体映射为unicode列表
+    filename = '/home/jason/workspace/1.ttf'
+    fnt = fontforge.open(filename)
+    for i in fnt.glyphs():
+        print i.unicode
+我们猜测映射关系如下：
+
+还记得嘛，第三张图我们爬取到的数据是“绣春刀·修罗战场 341189 2017-07-20 6号厅 2D 国语 11:10 &amp;#xebc4;&amp;#xe1e7;”，我们将“&amp;#”替换成“0”后对应上表得出的票价不是刚好是“29”嘛！
+
+python代码：
+
+
+```
+tmp_dic={}
+ttf_list = []
+def creatTmpDic():#创建映射字典
+    tmp_dic={}
+    ttf_list = []
+    num_list = [-1,-1,0,1,2,3,4,5,6,7,8,9]
+    filename = '/home/jason/workspace/1.ttf'
+    fnt = fontforge.open(filename)
+    ttf_list = []
+    for i in fnt.glyphs():
+        ttf_list.append(i.unicode)
+    tmp_dic = dict(zip(ttf_list,num_list))#构建字典
+    return tmp_dic,ttf_list
+def tff2price(para = &quot;;&quot;,tmp_dic={},ttf_list = []):#将爬取的字符映射为字典中的数字
+    tmp_return = &quot;&quot;
+    for j in para.split(&quot;;&quot;):
+        if j != &quot;&quot;:
+            ss = j.replace(&quot;&amp;#&quot;,&quot;0&quot;)
+            for g in ttf_list:
+                if (hex(g) == ss):
+                    tmp_return+=str(tmp_dic[g])
+    return tmp_return
+```
+
+好的，到此，我们已经可以说已经完成了对票价“加密”数据的破解啦~还是有点小小的成就感呢！但是，这里面还是有个很坑的地方：开发者已经想到采集者可以通过分析，知道每一个映射代表的意思，从而进行采集后转换处理，所以我们每次访问都是随机得到一种字体，而且开发者还定期更新一批字体文件和映射表用来加大采集的难度，所以我们在采集的过程中不得不每采集一个页面就更新一次本地的该网页的web-font字体，无疑会大大增加爬虫的爬取成本和爬取效率，所以从一定意义上确实实现了反爬虫。
+
+参考文献：
+
+http://blog.csdn.net/fdipzone/article/details/68166388
+
+https://baijiahao.baidu.com/s?id=1572788572555517&amp;wfr=spider&amp;for=pc
+
+https://zhuanlan.zhihu.com/p/20520370?columnSlug=python-hacker</pre>
+</div>
+<div created="20171117063348512" creator="Shaojie Kang" modified="20171117063409822" modifier="Shaojie Kang" tags="Selenium" title="识别captcha">
+<pre>http://www.pythonexample.com/code/solve-recaptcha-v2/</pre>
 </div>
 
 </div>
