--- a/project.html
+++ b/project.html
@@ -238,6 +238,8 @@ Error message and password prompt
 
 <li>gcc tutorial</li>
 
+<li>git revert</li>
+
 <li>Google's protocol buffers</li>
 
 <li>How can I merge two MySql tables?</li>
@@ -8677,19 +8679,19 @@ Error message and password prompt
 <div created="20171110032938492" creator="Shaojie Kang" modified="20171110032939380" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-ndpi--81657105">
 <pre>close</pre>
 </div>
-<div created="20171110034112953" creator="Shaojie Kang" modified="20171110061651954" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Office--81657105">
-<pre>close</pre>
+<div created="20171110034112953" creator="Shaojie Kang" modified="20180104033734441" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Office--81657105">
+<pre>open</pre>
 </div>
 <div created="20171110032936380" creator="Shaojie Kang" modified="20171110032937500" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Process--81657105">
 <pre>close</pre>
 </div>
-<div created="20171110032932204" creator="Shaojie Kang" modified="20171110085032248" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Programming--81657105">
-<pre>open</pre>
+<div created="20171110032932204" creator="Shaojie Kang" modified="20180104033733658" modifier="Shaojie Kang" title="$:/state/toc/TableOfContents-Programming--81657105">
+<pre>close</pre>
 </div>
 <div created="20170623084418490" creator="k" modified="20170623084506034" modifier="Shaojie Kan" title="$:/status/UserName">
 <pre>Shaojie Kang</pre>
 </div>
-<div list="Process [[Fabirc: Monitore Multiple Processes]] [[ftplib library]]" title="$:/StoryList">
+<div list="Office [[git revert]] [[ftplib library]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8705,7 +8707,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/kangshaojie.INTRA/Downloads/project%20(10).html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/kangshaojie.ESG/experience/project.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8725,7 +8727,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/kangshaojie.INTRA/Downloads/project%20(10).html&quot;
+            &quot;text&quot;: &quot;/C:/Users/kangshaojie.ESG/experience/project.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9703,6 +9705,11 @@ clean:
 	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ 
 ```
 </pre>
+</div>
+<div created="20180104033740731" creator="Shaojie Kang" modified="20180104033751546" modifier="Shaojie Kang" tags="Office" title="git revert">
+<pre>    git reset --hard &lt;commit_id&gt;
+
+    git push origin HEAD --force</pre>
 </div>
 <div created="20170714064750313" creator="Shaojie Kang" modified="20171110034325335" modifier="Shaojie Kang" tags="Networking" title="Google's protocol buffers">
 <pre></pre>
